# learn-opengl

./: CMakeLists.txt  main.cpp
include/glad/: glad.h
shaders/: default.frag  default.vert  light_source.frag
src/: Mesh.h  OBJ_Loader.h  camera.cpp  camera.h  ebo.cpp  glad.c  light.h  main.cpp  material.h  model.h  obj_parser.c  obj_parser.h  object.h  renderer.cpp  renderer.h  shaderClass.cpp  shaderClass.h  texture.cpp  texture.h  tiny_obj_loader.cpp  ubo.h  vao.cpp  vao.h  vbo.cpp  vbo.h  window.h
